portainer/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
  labels:
    app: portainer
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30777
      protocol: TCP
      name: http
    - port: 8000
      targetPort: 8000
      nodePort: 30778
      protocol: TCP
      name: edge
  selector:
    app: portainer
